--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -58,13 +58,19 @@
 
                 <Button
                     android:id="@+id/search_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="120dp"
+                    android:layout_height="60dp"
+                    android:layout_marginTop="16dp"
                     android:text="@string/serch"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/segment" />
+                    app:layout_constraintTop_toBottomOf="@id/segment"
+                    android:backgroundTint="@color/purple_500"
+                    android:textColor="@color/white"
+                    style="?attr/materialButtonOutlinedStyle"
+                    app:rippleColor="@color/white"
+                    app:strokeColor="@color/purple_500"/>
 
                 <Button
                     android:id="@+id/cancel_button"
