--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,6 +69,18 @@
             app:layout_constraintBottom_toBottomOf="@+id/date_text"
             app:layout_constraintStart_toEndOf="@+id/date_text" />
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="160dp"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="@+id/recycler_view"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="@+id/recycler_view"
+            app:layout_constraintTop_toTopOf="@+id/recycler_view" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </LinearLayout>
