--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.example.nhkprogramapi.NhkViewModel" />
+            type="com.nhk.nhkprogramapi.NhkViewModel" />
 
     </data>
 
@@ -41,8 +41,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
                 android:layout_marginBottom="16dp"/>
 
 
