--- a/app/src/main/res/layout/item_recycler.xml
+++ b/app/src/main/res/layout/item_recycler.xml
@@ -62,36 +62,22 @@
                         app:layout_constraintTop_toBottomOf="@+id/time_text" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
+                    <net.cachapa.expandablelayout.ExpandableLayout
                         android:id="@+id/expandable"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/row_layout"
-                        app:ael_duration="500"
-                        app:ael_expanded="false"
-                        app:ael_interpolator="bounce"
-                        app:ael_orientation="vertical"
-                        app:layout_constraintTop_toBottomOf="@+id/card_view"
-                        tools:layout_editor_absoluteX="0dp">
-
+                        app:el_duration="300"
+                        app:el_parallax="0.3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="勘違いしないでよね。別にアンタのためにしたわけじゃないんだからね。" />
-                    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>
+                            android:text="@string/etele"/>
+                    </net.cachapa.expandablelayout.ExpandableLayout>
 
-                </LinearLayout>
 
             </LinearLayout>
 
-
-
         </androidx.cardview.widget.CardView>
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
