--- a/app/src/main/res/layout/item_recycler.xml
+++ b/app/src/main/res/layout/item_recycler.xml
@@ -36,9 +36,14 @@
 
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/linear2"
+                    android:id="@+id/content"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/main_content"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
 
                     <TextView
@@ -62,13 +67,16 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/time_text" />
 
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
                     <net.cachapa.expandablelayout.ExpandableLayout
+                        app:layout_constraintTop_toBottomOf="@id/main_content"
                         android:id="@+id/expandable"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/teal_200"
-                        app:el_duration="300"
-                        app:el_parallax="0.3">
+                        app:el_duration="300">
 
                         <LinearLayout
                             android:layout_width="match_parent"
