--- a/app/src/main/res/layout/item_recycler.xml
+++ b/app/src/main/res/layout/item_recycler.xml
@@ -75,20 +75,17 @@
                         android:id="@+id/expandable"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/teal_200"
                         app:el_duration="300">
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@color/purple_500">
+                            android:layout_height="wrap_content">
 
                             <TextView
                                 android:id="@+id/expand_text"
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:gravity="center"
-                                android:text="折りたたみ" />
+                                android:gravity="center_horizontal" />
                         </LinearLayout>
 
 
