--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,8 @@
             app:layout_constraintVertical_bias="0.298" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:scrollbars="vertical"
+                android:fadeScrollbars="false"
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="550dp"
