非セグメント選択時プログレスバー非表示化

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:id="@+id/date_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
+            android:textColor="@color/dark_gray"
             android:textSize="25sp"
             app:layout_constraintBottom_toTopOf="@+id/recycler_view"
             app:layout_constraintEnd_toEndOf="parent"
@@ -39,6 +39,7 @@
                 android:layout_height="550dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
+                android:theme="@style/CustomTheme"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -53,6 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="48dp"
+            app:backgroundTint="@color/main"
             android:clickable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:text="@{viewModel.serviceNameMap[viewModel.serviceId]}"
-            android:textColor="@color/black"
+            android:textColor="@color/dark_gray"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="@+id/date_text"
             app:layout_constraintStart_toEndOf="@+id/date_text" />
